css/mobile.css
/* mobile devices */
@media screen and (max-width: 767px) {
  [aria-expanded="true"] ~ ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  [aria-expanded="true"] ~ ul li {
    margin-bottom: var(--size-20);
  }
  [aria-expanded="true"] ~ ul li a {
    margin-right: 0;
  }

  [aria-expanded="true"] ~ ul li:nth-child(6) {
    padding-top: 0;
  }

  .header-background {
    width: 100%;
  }

  .brand-icon-lg {
    height: 80px;
    width: 80px;
    padding: 16px;
  }

  .brand-icon-sm {
    height: 60px;
    width: 60px;
    padding: 12px;
  }

  .google {
    position: absolute;
    right: 80%;
  }
  .atlassian {
    position: absolute;
    right: 40%;
    top: 5%;
  }
  .assana {
    position: absolute;
    right: 0;
    top: 4px;
    height: 80px;
    width: 80px;
    padding: 16px;
  }
  .paypal {
    position: absolute;
    right: 76%;
    top: 120px;
    height: 70px;
    width: 70px;
    padding: 12px;
  }
  .weave {
    position: absolute;
    right: 20%;
    top: 120px;
    height: 70px;
    width: 70px;
    padding: 12px;
  }
  .google-a {
    position: absolute;
    right: 60%;
    top: 230px;
  }
  .calendar {
    position: absolute;
    right: 5%;
    top: 260px;
  }

  /* key benefits section */
  .benefits-cards-wrapper .benefit-card h4 {
    font-size: var(--size-14);
  }

  .mobile-none {
    display: none;
  }

  /* why front section */
  .why-front .dots-wrapper {
    display: flex;
    width: 100%;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin-left: var(--size-40);
    gap: var(--size-20);
  }

  .why-front .dot-item-wrapper {
    display: flex;
    flex-direction: row;
  }

  .dot-item-wrapper .why-text {
    width: fit-content;
  }

  /* hubspot section */
  .hubspot {
    margin-bottom: var(--size-50);
  }
  .hubspot .img-wrapper,
  .hubspot .hubspot-text-wrapper {
    width: 95%;
  }

  /* trusted by section */
  .trusted-by {
    margin-bottom: var(--size-50);
  }

  .trusted-by h3 {
    font-size: var(--size-20);
  }

  .trusted-by .trusted-brands {
    display: flex;
    flex-direction: column;
    gap: var(--size-14);
  }

  /* pricing section */
  .pricing .small-cards-wrapper {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 95%;
  }

  .small-cards-wrapper .small-stacked-cards .small-card {
    width: 100%;
  }

  /* hire us section */
  .hire-us .container {
    gap: var(--size-40);
  }

  .hire-us .hire-us-testimonial {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: var(--size-50);
  }

  .hire-us .hire-us-testimonial .tablet-top {
    text-align: center;
  }
  .hire-us .hire-us-testimonial .tablet-top .quote {
    margin-bottom: 0;
    font-size: var(--size-14);
  }

  .hire-us .hire-us-testimonial .tablet-btm {
    margin-top: 0;
    margin-right: 0;
    text-align: center;
  }

  .hire-us .hire-us-form .name-row {
    display: flex;
    flex-wrap: wrap;
  }

  .hire-us .hire-us-form .check-privacy label {
    font-size: var(--size-12);
  }

  /* footer section */

  footer .top-row {
    display: flex;
    flex-direction: column;
  }

  footer .front-card {
    width: 100%;
  }

  footer .front-card .front-icon-wrapper {
    margin-left: auto;
    margin-right: auto;
  }

  footer .front-card .address,
  footer .front-card .phone-number {
    justify-content: center;
    font-size: var(--size-14);
  }

  footer .links-cards-wrapper {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  footer .bottom-row {
    display: flex;
    flex-direction: column;
    gap: var(--size-20);
  }

  footer .bottom-row .right-icons .mobile-social-icons {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
  }

  footer .bottom-row .right-icons .mobile-icons-wrapper {
    display: flex;
    flex-direction: column;
    gap: var(--size-20);
  }

  footer .mobile-icons-wrapper .select-wrapper {
    margin-left: 0;
  }
}

